fix: making the plugin run on a single command

--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,6 @@
   "id": "1030229173373115702",
   "api": "1.0.0",
   "main": "code.js",
-  "editorType": [
-    "figma"
-  ],
+  "editorType": ["figma"],
   "ui": "ui.html"
 }
